force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/PJN_Data_Change_Request_Line__c.object-meta.xml
<CustomObject>
    <description>Lists all of the specific data changes that are being requested in a data change request.</description>
    <label>Data Change Request Line</label>
    <nameField>
        <displayFormat>DCRL - {000000000}</displayFormat>
        <label>DCR Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Change Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>