force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Information record related to the DCR Line.</description>
    <label>Contact Information</label>
    <referenceTo>PJN_Contact_Information__c</referenceTo>
    <relationshipLabel>Data Change Request Lines</relationshipLabel>
    <relationshipName>PJN_Data_Change_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>