force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Data_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>PJN_Data_Change_Request__c</fullName>
    <description>Part of the Patient Service accelerator: Parent data change request.</description>
    <label>Data Change Request</label>
    <referenceTo>PJN_Data_Change_Request__c</referenceTo>
    <relationshipLabel>Data Change Request Lines</relationshipLabel>
    <relationshipName>PJN_Data_Change_Request_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>