force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name__c</fullName>
    <description>Part of the Patient Service accelerator: Field API name in PS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field API Name</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
</CustomField>