force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_Label__c</fullName>
    <description>Field label in Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field label in Salesforce.</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>