force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_Name__c</fullName>
    <description>Part of the Patient Service accelerator: field label in PS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>