force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Final_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Final_Value__c</fullName>
    <description>Part of the Patient Service accelerator: Field value after Network validation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Value</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>