force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Is_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Address_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the Patient Service accelerator: is a salesforce address field</description>
    <label>Is Address Field</label>
    <type>Checkbox</type>
</CustomField>