force-app/main/default/src/objects/PJN_Data_Change_Request_Line__c/fields/PJN_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Old_Value__c</fullName>
    <description>Part of the Patient Service accelerator: field value before user update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Value</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>